<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Rauch.Christian@gmx.de">Christian Rauch</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libcamera</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
